<resources>
    <string name="app_name">sihmi</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting. Lorem Ipsum telah menjadi standar contoh teks sejak tahun 1500an, saat seorang tukang cetak yang tidak dikenal mengambil sebuah kumpulan teks dan mengacaknya untuk menjadi sebuah buku contoh huruf. Ia tidak hanya bertahan selama 5 abad, tapi juga telah beralih ke penataan huruf elektronik, tanpa ada perubahan apapun. Ia mulai dipopulerkan pada tahun 1960 dengan diluncurkannya lembaran-lembaran Letraset yang menggunakan kalimat-kalimat dari Lorem Ipsum, dan seiring munculnya perangkat lunak Desktop Publishing seperti Aldus PageMaker juga memiliki versi Lorem Ipsum.
    Tidak seperti anggapan banyak orang, Lorem Ipsum bukanlah teks-teks yang diacak. Ia berakar dari sebuah naskah sastra latin klasik dari era 45 sebelum masehi, hingga bisa dipastikan usianya telah mencapai lebih dari 2000 tahun. Richard McClintock, seorang professor Bahasa Latin dari Hampden-Sidney College di Virginia, mencoba mencari makna salah satu kata latin yang dianggap paling tidak jelas, yakni consectetur, yang diambil dari salah satu bagian Lorem Ipsum. Setelah ia mencari maknanya di di literatur klasik, ia mendapatkan sebuah sumber yang tidak bisa diragukan. Lorem Ipsum berasal dari bagian 1.10.32 dan 1.10.33 dari naskah "de Finibus Bonorum et Malorum" (Sisi Ekstrim dari Kebaikan dan Kejahatan) karya Cicero, yang ditulis pada tahun 45 sebelum masehi. BUku ini adalah risalah dari teori etika yang sangat terkenal pada masa Renaissance. Baris pertama dari Lorem Ipsum, "Lorem ipsum dolor sit amet..", berasal dari sebuah baris di bagian 1.10.32.</string>
    <string name="data_aktivitas">Statistik Data Aktivitas Pengguna</string>
    <string name="data_media">Statistik Data Media Pengguna</string>
    <string name="data_admin_aktif">Statistik Admin yang Aktif</string>
    <string name="konten_agenda">Statistik Admin Pembuat Agenda</string>
    <string name="konten_sejarah">Konten Tentang Kami</string>
    <string name="konten_konstitusi">Konten Konstitusi</string>
    <string name="kader_HMI">Kader HMI Nasional</string>
    <string name="perbarui_profil">Perbarui Profil</string>
    <string name="perbarui_kata_sandi">Perbarui Kata Sandi</string>
    <string name="telah_lk1_profil">Apakah Anda telah LK1?</string>
    <string name="alumni_profil">Apakah Anda Alumni HMI?</string>
    <string name="data_lain_profil">Lengkapi data lainnya</string>
    <string name="permohonan_admin_profil">Permohonan Admin</string>
    <string name="kata_sandi_ket">Untuk keamanan akun Anda, memperbarui kata sandi dapat Anda lakukan.</string>
    <string name="kata_sandi">Kata sandi</string>
    <string name="kata_sandi_baru">Kata sandi baru</string>
    <string name="konfirm_kata_sandi">Konfirm kata sandi baru</string>
    <string name="profil_lk1_ket">Permohonan ini sebagai verifikasi akun. Apakah Anda merupakan bagian dari HMI
    yang terdaftar di aplikasi SIHMI. Kemudian lengkapi data dimana tempat Anda melaksanakan LK1.</string>
    <string name="nama_badko">Nama Badko</string>
    <string name="nama_cabang">Nama Cabang</string>
    <string name="nama_korkom">Nama Korkom</string>
    <string name="nama_komisariat">Nama Komisariat</string>
    <string name="nama_pelatihan">Nama Pelatihan</string>
    <string name="tanggal_lk1">Tanggal LK1</string>
    <string name="pastikan">Pastikan data yang Anda isi benar.</string>
    <string name="checkbox_lk1">Ya benar saya telah LK1 &amp; saya bagian dari HMI.</string>
    <string name="profil_alumni_ket">Permohonan ini sebagai aktivitas lanjut. Apakah Anda merupakan alumni dari HMI
    yang terdaftar di aplikasi SIHMI. Kemudian lengkapi data Anda.</string>
    <string name="domisili_hmi_cab">Domisili HMI Cabang</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="jabatan">Jabatan</string>
    <string name="alamat_kerja">Alamat Kerja / Instansi</string>
    <string name="kontribusi">Kontribusi apa yang ingin Anda wujudkan di HMI?</string>
    <string name="checkbox_alumni">Ya benar saya Alumni HMI.</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tgl_lahir">Tgl Lahir</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="status_perkawinan">Status Perkawinan</string>
    <string name="akun_media_sosial">Akun Media Sosial</string>
    <string name="lengkapi_profil_ket">Lengkapi jenjang pelatihan apa saja yang pernah Anda ikuti di HMI</string>
    <string name="riwayat_profil_ket">Riwayat Pendidikan yang pernah ditempuh</string>
    <string name="pelatihan_HMI">Pelatihan HMI</string>
    <string name="strata">Strata</string>
    <string name="nama_institusi">Nama Institusi</string>
    <string name="jurusan">Jurusan</string>
    <string name="permohonan_admin_ket">Permohonan ini di khususkan bagi ketua komisariat, ketua cabang dan PB HMI.
        Hak akses akan diberikan berdasarkan pengajuan yang telah terverifikasi.</string>
    <string name="Komisariat">Komisariat</string>
    <string name="pilih_hak_akses">Pilih hak akses</string>
    <string name="unggah_dokumen_admin_ket">Dokumen yang di unggah yaitu SK yang membuktikan bahwa Anda sebagai ketua dari struktural di HMI.\n
    \nPastikan data yang Anda isi benar. Admin akan bertanggung jawab terhadap hak akses yang diperoleh dari aplikasi SIHMI. maka menjaga agar tetap aman
    menjadi kewajiban.</string>
    <string name="checkbox_permohonan_admin"><b>Saya akan menjaga nama baik himpunan &amp; \nMenjalankan roda organisasi sesuai konstitusi.</b></string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nama_panggilan">Nama Panggilan</string>
    <string name="gmmail">Gmail</string>
    <string name="no_hp">No. Hp</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="daftar">Daftar</string>
    <string name="daftar_ket">Silakan lakukan pendaftaran untuk menggunakan aplikasi SIHMI.</string>
    <string name="checkbox_daftar"><b>Saya setuju dengan syarat &amp; ketentuan yang belaku.</b></string>
    <string name="punya_akun">Saya punya akun.</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="masuk">Masuk</string>
    <string name="keluar">Keluar</string>
    <string name="lupa_kata_sandi_title">Lupa kata sandi</string>
    <string name="lupa_kata_sandi">Lupa kata sandi ?</string>
    <string name="laki2">Laki - laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="lupa_sandi_ket">Anda lupa kata sandi? Silakan lakukan permohonan untuk memperoleh kata sandi Anda. Lakukan pengisian data username &amp; email Anda,
    kemudian cek kata sandi di email Anda</string>
    <string name="ajukan">Ajukan</string>
    <string name="pengajuan_berhasil">Pengajuan telah dilayangkan</string>
    <string name="pengajuan_gagal">Pengajuan gagal dilayangkan</string>
    <string name="alih_akun">Beralih Akun</string>
    <string name="judul_konstitusi">Konstitusional HMI</string>
    <string name="tambah_konstitusi">Tambah Dokumen</string>
    <string name="perbarui_konstitusi">Perbarui Dokumen</string>
    <string name="tambah_konstitusi_ket">Anda dapat menambahkan konstitusi PB HMI terbaru, Pedoman LK1 &amp; Dokumen penunjang training lainnya. \nex: Pedoman LK1 2019.</string>
    <string name="perbarui_konstitusi_ket">Anda dapat memperbarui dokumen yang ada</string>
    <string name="judul_dokumen">Judul Dokumen</string>
    <string name="unggah_dokumen">Unggah Dokumen</string>
    <string name="judul_alamat">Alamat Koms</string>
    <string name="tambah_alamat">Tambah Alamat</string>
    <string name="perbarui_alamat">Perbarui Alamat</string>
    <string name="tambah_alamat_ket">Nikmati kemudahan untuk mengetahui lokasi komisariat Anda dengan menambahkan lokasi alamat komisariat Anda.\nMenentukan alamat lokasi
    komisariat dapat dilakukan dengan menandai lokasi atau tentukan posisi terkini Anda.</string>
    <string name="perbarui_alamat_ket">Nikmati kemudahan untuk mengetahui lokasi komisariat Anda dengan memperbarui lokasi alamat komisariat Anda.\nMenentukan alamat lokasi
    komisariat dapat dilakukan dengan menandai lokasi atau tentukan posisi terkini Anda.</string>
    <string name="cari_alamat">Cari Alamat</string>
    <string name="judul_user">Pengguna</string>
    <string name="permintaan_akses">Permintaan Akses</string>
    <string-array name="admin">
        <item>Non Aktif / User Biasa</item>
        <item>Admin 1</item>
        <item>Admin 2</item>
        <item>Admin 3</item>
        <item>Low Admin 1</item>
        <item>Low Admin 2</item>
        <item>Second Admin</item>
        <item>Super Admin</item>
    </string-array>
    <string name="konfirm_akses_ket">Apakah anda yakin akan memberikan akses ?</string>
    <string name="konfirm_ganti_admin_ket">Apakah anda yakin akan mengganti Admin ?</string>
    <string name="konfirm_akses_hapus_ket">Apakah anda yakin akan menghapus akses ?</string>
    <string name="approve_admin_title">Admin Diterima</string>
    <string name="approve_admin_desc">Dengan mengucapkan bismillahirrahmanirrahim amanah menjadi admin saya terima.</string>
    <string name="bismillah">Bismillah</string>
    <string name="admin_berakhir">Admin Berakhir</string>
    <string name="admin_berakhir_desc">Dengan mengucap Alhamdulillah amanah menjadi admin saya akhiri.</string>
    <string name="alhamdulillah">Alhamdulillah</string>
    <string name="selamat_berproses">Selamat Berproses</string>
    <string name="selamat_berproses_desc">Alhamdulillah. Selamat bergabung di HMI. Semoga Anda menjadi insan yang bermanfaat bagi umat &amp; bangsa.</string>
    <string name="yakusa">Yakusa</string>
    <string name="judul_agenda">Agenda HMI</string>
    <string name="tambah_agenda">Tambah Agenda</string>
    <string name="perbarui_agenda">Perbarui Agenda</string>
    <string name="tambah_agenda_ket">Nikmati kemudahan untuk mengetahui agenda terkini HMI dari PB HMI, Cabang dan Komisariat dengan menambahkan agenda.</string>
    <string name="perbarui_agenda_ket">Anda dapat memperbarui agenda yang ada</string>
    <string name="nama_agenda">Nama Agenda</string>
    <string name="tempat_agenda">Tempat Agenda</string>
    <string name="tanggal_agenda">Tanggal</string>
    <string name="jam_agenda">Jam</string>
    <string name="alamat_agenda">Alamat Agenda</string>
    <string name="pemberitahuan_agenda">Pemberitahuan akan aktif 10 menit sebelum Agenda berlangsung</string>
    <string name="kirim_pesan">Kirim Pesan</string>
    <string name="judul_tentang_kami">Tentang Kami</string>
    <string name="tambah_tentang_kami">Tambah Tentang Kami</string>
    <string name="perbarui_tentang_kami">Perbarui Tentang Kami</string>
    <string name="tambah_bantuan_ket">Anda dapat menambahkan Bantuan untuk panduan dari penggunaan Sistem Aplikasi SIHMI</string>
    <string name="simpan">Simpan</string>
    <string name="maks_dokumen_admin">Maksimal 5 MB</string>
    <string name="tindakan">Tindakan yang ingin Anda lakukan</string>
    <string name="detail">Lihat Detail</string>
    <string name="ubah">Ubah Data</string>
    <string name="hapus">Hapus</string>
    <string name="komisariat">Komisariat</string>
</resources>