<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.LK1Activity">

    <include layout="@layout/header_layout"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:textColor="?attr/textcolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profil_lk1_ket"
                android:textSize="11sp" />

            <EditText
                android:id="@+id/et_badko"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_badko"
                android:longClickable="false"
                android:focusable="false"
                android:textColor="?attr/textcolor"/>

            <EditText
                android:id="@+id/et_cabang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_cabang"
                android:longClickable="false"
                android:focusable="false"
                android:textColor="?attr/textcolor"/>

            <EditText
                android:id="@+id/et_korkom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_korkom"
                android:longClickable="false"
                android:focusable="false"
                android:textColor="?attr/textcolor"/>

            <EditText
                android:id="@+id/et_komisariat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_komisariat"
                android:longClickable="false"
                android:focusable="false"
                android:textColor="?attr/textcolor"/>

            <EditText
                android:id="@+id/et_tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tanggal_lk1"
                android:longClickable="false"
                android:focusable="false"
                android:textColor="?attr/textcolor"/>

            <TextView
                android:textColor="?attr/textcolor"
                android:id="@+id/tv_ket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pastikan"
                android:textSize="11sp" />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/checkbox_lk1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_simpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="?attr/colorPrimary"
                android:text="@string/simpan"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>