<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:textColor="?attr/textcolor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tindakan"
        android:textSize="14sp"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/tv_lihat"
        android:textColor="?attr/colorAccent"
        android:text="@string/detail"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_ubah"
        android:textColor="?attr/colorAccent"
        android:text="@string/ubah"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/tv_hapus"
        android:textColor="?attr/colorAccent"
        android:text="@string/hapus"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />
</LinearLayout>